--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "mongodb": "^6.17.0"
   }
 }
