--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --watch server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "cd ../frontend && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
